--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-macos is-frameless obsidian-app native-scrollbars theme-light show-inline-title show-ribbon show-view-header math-booster-preview-enabled css-settings-manager Heading ribbon-default editor-bg-default file-header-default sb-default sb-item-default is-focused
+STYLE_SETTINGS_BODY_CLASSES=mod-macos is-frameless obsidian-app native-scrollbars theme-light show-inline-title show-ribbon show-view-header math-booster-preview-enabled css-settings-manager Heading is-focused callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover
 USE_FULL_RESOLUTION_IMAGES=true
-THEME=https://raw.githubusercontent.com/SlRvb/Obsidian--ITS-Theme/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=true
