--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@ SITE_BASE_URL=http://quantuminfo.site
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
-NOTE_ICON_DEFAULT=
-NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
-NOTE_ICON_INTERNAL_LINKS=false
-NOTE_ICON_BACK_LINKS=false
+NOTE_ICON_DEFAULT=2
+NOTE_ICON_TITLE=true
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_BACK_LINKS=true
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=mod-macos is-frameless obsidian-app native-scrollbars theme-light show-inline-title show-ribbon show-view-header math-booster-preview-enabled css-settings-manager callouts-default trim-cols checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover is-focused
 USE_FULL_RESOLUTION_IMAGES=true
